--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
     <calcite-shell-panel class="contentW" id="calsite-shell" slot="panel-start">
       <calcite-flow id="example-flow" class="contentW01">
-        <calcite-flow-item heading="Kuwait Prices" description="See your total number of areas here">
+        <calcite-flow-item id="n" heading="Kuwait Prices" description="See your total number of areas here">
           <calcite-action icon="urban-model" scale="l" text="Favorite" slot="header-actions-start"></calcite-action>
           <calcite-block id="first-flow-item-block" heading="Recommended for you" open>
             <calcite-list id="calcite-list" selection-mode="single" drag-enabled selection-appearance="icon">
