--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
       --calcite-shell-panel-min-width: 400px;
     }
 
+    @media only screen and (max-width: 600px) {
+    .contentW01 {
+      height: 12rem;
+    }
+    }
+
     #first-flow-item-block {
       --calcite-block-padding: 0px;
     }
