--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
 
     <calcite-dropdown class="drop-width" id="drop-down-beds" width="m">
-      <calcite-button id="beds" class="layersbtn" slot="trigger" icon-start="caret-down">Choose No. Beds</calcite-button>
+      <calcite-button id="beds" class="layersbtn" slot="trigger" icon-start="caret-down">Choose unit type</calcite-button>
       <calcite-dropdown-group class="layersbtn" group-title="Available houses types"></calcite-dropdown-group>
     </calcite-dropdown>
 
